--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,14 @@
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  width:100%;
+  width: 100%;
   height: 50px;
   background-color: black;
   text-align: center;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
